--- a/main.html
+++ b/main.html
@@ -8,27 +8,29 @@
     <body>
         <div id="buttonContainer">
             <h1>List of Buttons</h1>
+            <!--make a list of buttons so screenreaders know how many buttons are available -->
+            <p>Click a button to see what index it is!</p>
             <ul id="buttonList">
-                <li><button>Button 1</button></li>
-                <li><button>Button 2</button></li>
-                <li><button>Button 3</button></li>
-                <li><button>Button 4</button></li>
-                <li><button>Button 5</button></li>
-                <li><button>Button 6</button></li>
-                <li><button>Button 7</button></li>
-                <li><button>Button 8</button></li>
-                <li><button>Button 9</button></li>
-                <li><button>Button 10</button></li>
-                <li><button>Button 11</button></li>
-                <li><button>Button 12</button></li>
-                <li><button>Button 13</button></li>
-                <li><button>Button 14</button></li>
-                <li><button>Button 15</button></li>
-                <li><button>Button 16</button></li>
-                <li><button>Button 17</button></li>
-                <li><button>Button 18</button></li>
-                <li><button>Button 19</button></li>
-                <li><button>Button 20</button></li>
+                <li><button id="b1">Button 1</button></li>
+                <li><button id="b2">Button 2</button></li>
+                <li><button id="b3">Button 3</button></li>
+                <li><button id="b4">Button 4</button></li>
+                <li><button id="b5">Button 5</button></li>
+                <li><button id="b6">Button 6</button></li>
+                <li><button id="b7">Button 7</button></li>
+                <li><button id="b8">Button 8</button></li>
+                <li><button id="b9">Button 9</button></li>
+                <li><button id="b10">Button 10</button></li>
+                <li><button id="b11">Button 11</button></li>
+                <li><button id="b12">Button 12</button></li>
+                <li><button id="b13">Button 13</button></li>
+                <li><button id="b14">Button 14</button></li>
+                <li><button id="b15">Button 15</button></li>
+                <li><button id="b16">Button 16</button></li>
+                <li><button id="b17">Button 17</button></li>
+                <li><button id="b18">Button 18</button></li>
+                <li><button id="b19">Button 19</button></li>
+                <li><button id="b20">Button 20</button></li>
             </ul>  
         </div>
     </body>
