Minor tweaks for JavaScript accessibility

--- a/main.html
+++ b/main.html
@@ -4,8 +4,11 @@
     <head>
         <meta charset="utf-8">
         <title>Button in Bunch</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>   -->
     </head>
     <body>
+        <main aria-label="main content">
         <div id="buttonContainer">
             <h1>List of Buttons</h1>
             <!--make a list of buttons so screenreaders know how many buttons are available -->
@@ -33,5 +36,7 @@
                 <li><button id="b20">Button 20</button></li>
             </ul>  
         </div>
+        <div id="message"></div>
+        </main>
     </body>
 </html>
